Correct padding on mobile Release Notes page

--- a/css/payzip-v2-brochure-site.webflow.css
+++ b/css/payzip-v2-brochure-site.webflow.css
@@ -1773,6 +1773,11 @@
     max-width: 3rem;
   }
 
+  .releasecontainer.releasewhite {
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
   .releasecontainer.releaseblue {
     padding-right: 10px;
     padding-left: 10px;
